--- a/docs/dxp/latest/en/process-automation/workflow/developer-guide/creating-a-workflow-instance-tracker/resources/liferay-f2m9.zip/f2m9-web/package.json
+++ b/docs/dxp/latest/en/process-automation/workflow/developer-guide/creating-a-workflow-instance-tracker/resources/liferay-f2m9.zip/f2m9-web/package.json
@@ -4,5 +4,8 @@
 	"scripts": {
 		"build": "liferay-npm-scripts build"
 	},
-	"version": "1.0.0"
+	"version": "1.0.0",
+	"devDependencies": {
+		"@liferay/npm-scripts": "^46.7.0"
+	}
 }
